Alterando regra para atualizar participante de uma reserva
